force-app/main/default/objects/Digital_Shipping_Label__c/Digital_Shipping_Label__c.object-meta.xml
<CustomObject>
    <label>Digital Shipping Label</label>
    <nameField>
        <label>Digital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Shipping Label</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>