force-app/main/default/objects/Digital_Shipping_Label__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Digital Shipping Label</relationshipLabel>
    <relationshipName>Digital_Shipping_Label</relationshipName>
    <type>Lookup</type>
</CustomField>