force-app/main/default/objects/Digital_Shipping_Label__c/fields/Status_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Status_Identifier__c</fullName>
    <label>Status Identifier</label>
    <type>AutoNumber</type>
</CustomField>